Rewrite generic code used to create a node